# lerobot-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lerobot_mcp/: __init__.py  __main__.py  config.py  hub.py  introspection.py  metadata.py  runner.py  server.py  types.py
tests/: test_hub.py  test_introspection.py  test_mcp_stdio.py  test_runner.py  test_server.py
